--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -34,7 +34,7 @@ on:
 permissions: write-all
 jobs:
   automerge:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - id: automerge
         name: automerge
